# Spotify-Overlay

./: .gitignore  LICENSE  README.md  SpotifyOverlay.iss  SpotifyOverlay.slnx  build.ps1
src/SpotifyOverlay.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SpotifyOverlay.App.csproj  app.manifest
src/SpotifyOverlay.App/Server/: BackendServer.cs  LoopbackExemptManager.cs
src/SpotifyOverlay.Core/: Class1.cs  SpotifyOverlay.Core.csproj
src/SpotifyOverlay.Core/Injection/: AntiCheatBlacklist.cs  Injector.cs
src/SpotifyOverlay.Core/Input/: GlobalHotkeyManager.cs
src/SpotifyOverlay.Core/Logging/: BackendLogger.cs  Logger.cs
src/SpotifyOverlay.Core/Models/: LyricsResult.cs  Settings.cs
src/SpotifyOverlay.Core/OAuth/: OAuthManager.cs  SpotifyConfig.cs  TokenStorage.cs
src/SpotifyOverlay.Core/Plugins/: IOverlayModule.cs  IPlugin.cs  ISpotifyModule.cs
src/SpotifyOverlay.Core/Profiles/: ProfileManager.cs
src/SpotifyOverlay.Core/Services/: ArtistService.cs  LyricsService.cs  NotificationService.cs  ThemeService.cs
src/SpotifyOverlay.Core/Spotify/: SpotifyClient.cs  SpotifyStateService.cs
src/SpotifyOverlay.GameBar/: App.xaml  App.xaml.cs  ConnectionManager.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  SpotifyOverlay.GameBar.csproj  SpotifyOverlayWidget.xaml  SpotifyOverlayWidget.xaml.cs
src/SpotifyOverlay.GameBar/Models/: IUiModelMapper.cs  LyricLineUIModel.cs  UIModels.cs  UnifiedItem.cs
src/SpotifyOverlay.GameBar/Properties/: AssemblyInfo.cs
src/SpotifyOverlay.Hook/: CMakeLists.txt
src/SpotifyOverlay.Hook/src/: DX11Hook.cpp  DX11Hook.h  HookManager.cpp  HookManager.h  IPCClient.cpp  IPCClient.h  Logger.cpp  Logger.h  OverlayRenderer.cpp  OverlayRenderer.h  dllmain.cpp
src/SpotifyOverlay.Hook/src/Renderer/: D3D11Renderer.cpp  D3D11Renderer.h  IRenderBackend.h
src/SpotifyOverlay.IPC/: ITransport.cs  SpotifyOverlay.IPC.csproj  spotify_overlay.proto
src/SpotifyOverlay.OverlayWindow/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SpotifyOverlay.OverlayWindow.csproj  Win32Interop.cs
src/SpotifyOverlay.Overwolf/: index.html  manifest.json
src/SpotifyOverlay.Overwolf/css/: style.css
src/SpotifyOverlay.Overwolf/js/: app.js
src/SpotifyOverlay.Service/: Program.cs  SpotifyOverlay.Service.csproj  Worker.cs
src/SpotifyOverlay.Service/IPC/: IPCServer.cs
src/SpotifyOverlay.Service/Properties/: launchSettings.json
src/SpotifyOverlay.Service/Spotify/: AlbumArtworkCache.cs  ISpotifyProvider.cs  (+2 more)
src/SpotifyOverlay.TestHost/: CMakeLists.txt  main.cpp
(+7 files in other folders)
